<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastrar"
    tools:ignore="labelFor"
    android:background="@color/yellow_green_crayola">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:layout_marginBottom="10dp"
            android:text="@string/diga_vc"
            android:layout_gravity="center"
            android:textColor="@color/dark_jungle_green"
            android:textSize="30sp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/cpf"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark_jungle_green"
            android:textSize="22sp">
        </TextView>

        <EditText
            android:id="@+id/edt_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:hint="@string/cpf"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/nome_completo"
            android:textColor="@color/dark_jungle_green"
            android:textSize="22sp">
        </TextView>

        <EditText
            android:id="@+id/edt_nome_completo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:hint="@string/nome_completo_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            tools:ignore="TextContrastCheck">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textColor="@color/dark_jungle_green"
            android:textSize="22sp">
        </TextView>

        <EditText
            android:id="@+id/edt_email_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:layout_marginTop="10dp"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck">
        </EditText>

        <EditText
            android:id="@+id/edt_email_confirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:layout_marginTop="10dp"
            android:hint="@string/confirmar_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/celular"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark_jungle_green"
            android:textSize="22sp">
        </TextView>

        <EditText
            android:id="@+id/edt_celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:layout_marginTop="10dp"
            android:hint="@string/celular_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="10dp"
            android:text="@string/senha"
            android:textColor="@color/dark_jungle_green"
            android:textSize="22sp">
        </TextView>

        <EditText
            android:id="@+id/edt_senha_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:layout_marginTop="10dp"
            android:hint="@string/user_password"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck">
        </EditText>

        <EditText
            android:id="@+id/edt_senha_cadastro_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:layout_marginTop="10dp"
            android:hint="@string/repetir_senha"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck">
        </EditText>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp">

            <Button
                android:id="@+id/btn_realizar_cadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar"
                android:onClick="cadastrar"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp">
            </Button>

            <Button
                android:id="@+id/btn_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:onClick="cancelar"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp">
            </Button>

        </GridLayout>


    </LinearLayout>
</ScrollView>